force-app/main/default/objects/Instrucao_de_Servico__c/Instrucao_de_Servico__c.object-meta.xml
<CustomObject>
    <label>Instrução de Serviço</label>
    <nameField>
        <label>Instrução de Serviço</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instruções de Serviço</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>