force-app/main/default/objects/Instrucao_de_Servico__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>404</errorMessage>
        <filterItems>
            <field>Account.GrupoHospcom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instruções de Serviço</relationshipLabel>
    <relationshipName>instrucao_Servico_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>