force-app/main/default/objects/Instrucao_de_Servico__c/fields/Natureza_da_Alteracao__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_Alteracao__c</fullName>
    <label>Natureza da Alteração</label>
    <type>TextArea</type>
</CustomField>