force-app/main/default/objects/Instrucao_de_Servico__c/fields/Procedimento_do_Sistema_de_Qualidade__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_do_Sistema_de_Qualidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento do Sistema de Qualidade</label>
    <referenceTo>PSQ__c</referenceTo>
    <relationshipLabel>Instruções de Serviço</relationshipLabel>
    <relationshipName>Instru_es_de_Servi_o</relationshipName>
    <type>Lookup</type>
</CustomField>