force-app/main/default/objects/Instrucao_de_Servico__c/fields/Procedimento_Operacional_Padr_o__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_Operacional_Padr_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento Operacional Padrão</label>
    <referenceTo>POP__c</referenceTo>
    <relationshipLabel>Instruções de Serviço</relationshipLabel>
    <relationshipName>Instru_es_de_Servi_o</relationshipName>
    <type>Lookup</type>
</CustomField>