force-app/main/default/objects/Instrucao_de_Servico__c/listViews/C_pia_de_Instru_o_de_Servi_o.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Instru_o_de_Servi_o</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Cargo__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa__c</field>
        <operation>contains</operation>
        <value>IZU</value>
    </filters>
    <label>Instrução de Serviço IZU</label>
</ListView>