force-app/main/default/objects/Instrucao_de_Servico__c/listViews/Instru_o_de_Servi_o_Qualidade.listView-meta.xml
<ListView>
    <fullName>Instru_o_de_Servi_o_Qualidade</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Cargo__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>contains</operation>
        <value>Qualidade</value>
    </filters>
    <label>Instrução de Serviço - Qualidade</label>
</ListView>