force-app/main/default/objects/Instrucao_de_Servico__c/listViews/Instrucao_de_Servicos.listView-meta.xml
<ListView>
    <fullName>Instrucao_de_Servicos</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Cargo__c</columns>
    <columns>Responsavel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Instrução de Serviço</label>
</ListView>